# RgbdSlamPrac

./: .gitignore
part1/src/: CMakeLists.txt  generatePointCloud.cpp  main.cpp
part2/include/: Makefile  cmake_install.cmake  slam_transform.h
part2/include/src/: Makefile
part2/src/: CMakeLists.txt  slam_estimate.cpp  slam_transform.cpp
part3/include/: CMakeCache.txt  slam_estimate.h  slam_parameters.h
part3/params/: config.yaml  config.yml
part3/src/: CMakeLists.txt  join_point_cloud.cpp  slam_estimate.cpp  slam_parameters.cpp  slam_transform.cpp
part4/: CMakeLists.txt
part4/include/: join_pointcloud.h  slam_estimate.h  slam_parameters.h  slam_transform.h
part4/params/: config.yml
part4/src/: CMakeLists.txt  join_pointcloud.cpp  slam_estimate.cpp  slam_parameters.cpp  slam_transform.cpp  visual_odometry.cpp
part5/: CMakeLists.txt
part5/data/: debug.txt  result_after.g2o  result_before.g2o
part5/include/: slam_parameters.h  slam_transform.h
part5/src/: CMakeLists.txt  join_pointcloud.cpp  visual_odometry.cpp
part6/: debug.txt
part6/include/: join_pointcloud.h  slam_estimate.h
part6/src/: CMakeLists.txt  join_pointcloud.cpp  slam.cpp  slam_transform.cpp
